# Agentic-CRM-System

./: .gitignore  README.md
mcp/: .env  pyproject.toml  server.py
mcp/docs/: PHASE-1-CORE-CRM.md  PHASE-2-LEADS-PIPELINE.md  PHASE-3-ACTIVITIES-MEETINGS.md  PHASE-4-CAMPAIGNS-MARKETING.md  PHASE-5-ANALYTICS-REPORTING.md  PHASE-6-QUOTES-ORDER-PRODUCTS.md  PHASE-7-INTEGRATIONS-AUTOMATION.md
mcp/src/config/: __init__.py  db_config.py
mcp/src/services/: __init__.py  db.py  models.py
mcp/src/tools/: crm_tools.py
